vpc.tf
resource "aws_vpc" "main_vpc" {
  cidr_block           = "10.100.0.0/16"
  enable_dns_hostnames = true
  enable_dns_support   = true

  tags = {
    Name = "${var.environment_prod}-vpc"
    Environment = "${var.environment_prod}"
  }
}
